yamls/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    app: client-pod
spec:
  containers:
  - image: my-go-app
    imagePullPolicy: IfNotPresent
    name: client
    ports:
      - containerPort: 80
    volumeMounts:
    - name: empty
      mountPath: /app/logs
  volumes:
  - name: empty
    emptyDir: {}
