yamls/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 80
