yamls/dr-client.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: client-destination-rule
spec:
  host: client.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http1MaxPendingRequests: 5
