yamls/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        exact: /log
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
    timeout: 1s
    retries:
      attempts: 2
      retryOn: gateway-error,connect-failure,refused-stream,5xx
  - match:
    - uri:
        exact: /logs
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        exact: /status
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 404
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
